--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{title}}</h1>
-<p>Welcome t {{title}}</p>
+<div class="container-fluid panel">
+    {{#for 0 8 1}}
+        <div class="row">
+            <div class="col-sm-6 col-lg-1 col-lg-offset-5 col">
+                <span>Bit {{this}}</span>
+            </div>
+            <div class="col-sm-6 col-lg-1 col">
+                <input type="checkbox" data-toggle="toggle" data-height="100%" data-width="100%" data-onstyle="success">
+            </div>
+        </div>
+    {{/for}}
+</div>
