--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <script src="bower_components/Jquery/dist/jquery.min.js"></script>
+        <script src='/bower_components/Jquery/dist/jquery.min.js'></script>
+        <script src='/bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js'></script>
         <link rel='stylesheet' href='/stylesheets/style.css' />
+        <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css'/>
+        <link rel='stylesheet' href='/bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' />
     </head>
     <body>
     {{{body}}}
