--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,6 +4,8 @@
         <title>{{title}}</title>
         <script src='/bower_components/Jquery/dist/jquery.min.js'></script>
         <script src='/bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js'></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/javascripts/main.js"></script>
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css'/>
         <link rel='stylesheet' href='/bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' />
