--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,7 +5,7 @@
                 <span>Bit {{this}}</span>
             </div>
             <div class="col-sm-6 col-lg-1 col">
-                <input type="checkbox" data-toggle="toggle" data-height="100%" data-width="100%" data-onstyle="success">
+                <input type="checkbox" id="toggle-{{this}}" data-toggle="toggle" data-height="100%" data-width="100%" data-onstyle="success">
             </div>
         </div>
     {{/for}}
