--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -11,7 +11,6 @@ body
 .panel
   @extend %full-height
   .row
-    margin-top: $panel-row-margin-top
     min-height: (100 - ($panel-row-margin-top * 8)) / 8
     height: (100 - ($panel-row-margin-top * 8)) / 8
     .col
@@ -31,3 +30,45 @@ body
         font-size: $panel-font-size-sm
         @media (min-width: $screen-lg)
           font-size: $panel-font-size-lg
+
+.effects-panel
+  $font-size-lg: 2rem
+  $font-size-sm: 7rem
+  $row-height-lg: 10rem
+  $row-height-sm: 20rem
+  font-size: $font-size-sm
+  @media (min-width: $screen-lg)
+    font-size: $font-size-lg
+  div, a, button, span
+    font-size: inherit
+  .row
+    .col
+      background-color: $light-gray
+      height: $row-height-sm
+      padding: 1rem 1rem
+      @media (min-width: $screen-lg)
+        height: $row-height-lg
+      button, a, span
+        width: 100%
+      a, button
+        height: $row-height-sm - 2
+        @media (min-width: $screen-lg)
+          height: $row-height-lg - 2
+        span
+          height: $row-height-sm - 4
+          line-height: $row-height-sm - 4
+          @media (min-width: $screen-lg)
+            height: $row-height-lg - 4
+            line-height: $row-height-lg - 4
+    .col-label
+      line-height: $row-height-sm - 2
+      text-align: center
+      @media (min-width: $screen-lg)
+        line-height: $row-height-lg - 2
+
+.led
+  $size: 30px
+  width: $size
+  height: $size
+  border-radius: 50%
+  display: inline-block
