--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,6 +3,8 @@
     <head>
         <title>{{title}}</title>
         <script src='/bower_components/Jquery/dist/jquery.min.js'></script>
+        <script src='/bower_components/bootstrap/js/collapse.js'></script>
+        <script src='/bower_components/bootstrap/js/transition.js'></script>
         <script src='/bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js'></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/javascripts/main.js"></script>
