--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -49,6 +49,10 @@ body
       button, a
         width: 100%
         height: 100%
+  .slider
+    width: 100%!important
+    .slider-selection
+      background: $bootstrap-blue
 
 .led
   $size: 30px
