--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,11 +6,13 @@
         <script src='/bower_components/bootstrap/js/collapse.js'></script>
         <script src='/bower_components/bootstrap/js/transition.js'></script>
         <script src='/bower_components/bootstrap-toggle/js/bootstrap-toggle.min.js'></script>
+        <script src='/bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js'></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/javascripts/main.js"></script>
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.min.css'/>
         <link rel='stylesheet' href='/bower_components/bootstrap-toggle/css/bootstrap-toggle.min.css' />
+        <link rel='stylesheet' href='/bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css' />
     </head>
     <body>
     {{{body}}}
